Webpage Hosting Test Success?

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: BakbakOne;
-    src: url("fonts/BakbakOne-Regular.ttf");
+    src: url("https://beepcomp.co/fonts/BakbakOne-Regular.ttf");
 }
 
 body {
